syntax = "proto3";

option csharp_namespace = "WebApi.Services";

enum ReadingStatus {
	INVALID = 0;
	SUCCESS = 1;
	FAILURE = 2;
}